integrated coconut dataset

--- a/core/pretraining_config_coconut.yaml
+++ b/core/pretraining_config_coconut.yaml
@@ -8,8 +8,8 @@ max_epochs: 100
 gradient_clip_val: 0.5
 monitor_loss_name: train_total_loss
 
-num_workers: 6
-molecule_max_atoms: 100  # Very conservative limit for COCONUT natural products
+num_workers: 8
+molecule_max_atoms: 150  # Very conservative limit for COCONUT natural products
 
 # Universal representation specific settings
 use_universal_cache: true
@@ -65,23 +65,22 @@ set_max_items: 0
 triu_attn_mask: false
 
 # Positional encoding
-use_posenc: false
+posenc: null
 
 gaussian_kernels: 128
 cutoff_distance: 5.0
 max_neighbors: 16
-max_distance: 10.0  # Slightly larger for natural products with extended conformations
+max_distance: 12.0  # Slightly larger for natural products with extended conformations
 distance_bins: 64
 
-# Pretraining tasks matching working model
-pretraining_tasks: ["short_range_distance", "mlm", "long_range_distance"]
+# Pretraining tasks optimized for natural products (3D structure-based)
+pretraining_tasks: ["long_range_distance", "short_range_distance", "coordinate_denoising"]
 task_weights:
-  long_range_distance: 1.0  # Global 3D structure learning
+  long_range_distance: 0.8   # Higher weight for natural products with complex 3D structures
   short_range_distance: 1.0  # Local chemical bond learning
-  mlm: 0.5  # Masked language modeling helps representation learning
-  
+  coordinate_denoising: 1.2  # Higher weight for complex natural product conformations
 
-mlm_mask_ratio: 0.15
+mlm_mask_ratio: 0  # Required parameter (not used since MLM task is removed)
 temperature: 0.1
 
 lr: 0.0005  # Match working model exactly
